# Metax

./: .gitignore  Cargo.toml  LICENSE  MANUAL.md  README.md
data/: pathogen_host_disease.txt
recipe/: build.sh  meta.yaml
src/: aligner.rs  lib.rs  logging.rs  main.rs  taxonomy.rs
src/profiler/: community.rs  mod.rs  strain.rs
